<resources>
    <string name="app_name">Diigoer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="please_input_url">Please Input</string>
    <string name="add">Add</string>
    <string name="url">Url</string>
    <string name="tag">Tag</string>
    <string name="date">Date</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="action_sync">Sync</string>
    <string name="action_search">Search</string>
    <string name="action_share">Share</string>
    <string name="title">Title</string>
    <string name="tags">Tags</string>
    <string name="desc">Desc</string>
    <string name="shared">Shared</string>
    <string name="read_later">Read Later</string>
    <string name="select">Selec</string>
    <string name="action_add">Add</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="diigo_login">Diigo Login</string>
    <string name="action_login">Login</string>
    <string-array name="list_item">
        <item>Public Marks</item>
        <item>Private Marks</item>
        <item>Read Later</item>
        <item>Recent Add</item>
        <item>No Sync</item>
        <item>All Bookmarks</item>
        <item>Tags</item>
    </string-array>
    <string name="title_activity_search">SearchActivity</string>
    <string name="account">Account</string>
    <string name="tikitoo">Tikitoo</string>
    <string name="other_settings">Other Settings</string>
    <string name="about_me">About Me</string>
    <string name="github">Github</string>
    <string name="zhihu">知乎</string>
    <string name="blogs">Blogs</string>
    <string name="action_logout">Logout</string>
    <string name="add_test">Add Test</string>
    <string name="is_null" />
    <string name="cache">Cache</string>
    <string name="title_detail">Title：Hello World</string>
    <string name="tags_detail">Tags：hello world program</string>
    <string name="create_at_detail">Create Time：2015/01/13</string>
    <string name="desc_detail">Description：This is website</string>
    <string name="comments_detail">Comments：Null</string>
    <string name="theme_settings">Theme Settings</string>
    <string name="remove_cache_settings">Remove Cache</string>
    <string name="about_auther">About Auther</string>
    <string name="about">About</string>
    <string name="open_source">Open Source</string>
    <string name="contacts">Contacts</string>
    <string name="logout">Logout</string>
    <string name="about_app">About App</string>
    <string name="contacts_me">Coutacts Me</string>
    <string name="diigo_demo_lisense_async_http"><![CDATA[
        <center>Copy Right 2014 James Smith</center>
        <p>
        The Android Asynchronous Http Client is released under the Android-friendly Apache License, Version 2.0. Read the full license here:</p>
        <center> http://www.apache.org/licenses/LICENSE-2.0</center>
        ]]>
    </string>
    <string name="diigoer_detail">Digoer 是一个Diigo Android 客户端，实现了登录，查看书签，登录书签，对书签的分类，查找，分享（也可分享其他URL 到Diigo），缓存，设置主题等功能；该App 并且开源：</string>
    <string name="diigoer_about">About Diigoer</string>
    <string name="diigoer_github">http://www.github.com/Tikitoo/Diigoer</string>
    <string name="diigoer_github_wiki_detail">欢迎查看WIKI</string>
    <string name="diigoer_github_issues_detail">欢迎提交ISSUES</string>
    <string name="diigoer_github_end">最后欢迎WATCH，STAR，FORK；</string>
    <string name="more">More</string>
    <string name="about_author">About Author</string>
    <string name="tikitoo_github">Github</string>
    <string name="tikitoo_zhihu">Zhihu: </string>
    <string name="tikitoo_zhihu_link">http://www.zhihu.com/people/Tikitoo</string>
    <string name="tikitoo_weibo">\@安卓同学</string>
    <string name="tikitoo_weibo_link">http://www.weibo.com/lyf0306</string>
    <string name="tikitoo_gmail">Email: </string>
    <string name="tikitoo_gmail_link">codes0306@gmail.com</string>
    <string name="tikitoo_blog">Blog: </string>
    <string name="tikitoo_blog_link">http://tikitoo.github.io/blog</string>
</resources>