<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_add"
        android:orderInCategory="100"
        android:title="@string/action_add"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sync"
        android:orderInCategory="100"
        android:title="@string/action_sync"
        android:icon="@android:drawable/ic_popup_sync"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="collapseActionView|never"
        app:actionViewClass="android.support.v7.widget.SearchView"
        />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@android:drawable/ic_menu_manage"
        app:showAsAction="never" />
    
    <!--<item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />
    -->
</menu>
