<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dip"
    android:background="@color/background_material_light"
    android:orientation="vertical">
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dip"
        android:textSize="15sp"
        android:textColor="@color/abc_primary_text_material_dark"
        android:hint="@string/account"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/background_material_dark"
        />
    
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/settings_account_info_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:textSize="25sp"
            android:textColor="@color/background_material_dark"
            android:text="@string/is_null"
            />
        <ImageButton
            android:id="@+id/settings_logout_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="5dip"
            android:onClick="onLogoutAccount"
            android:background="@drawable/action_cancel"
            />
    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:padding="10dip"
        android:hint="@string/other_settings"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/background_material_dark"
        />
    <Button
        android:id="@+id/settings_theme_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/button_material_light"
        android:textSize="20dp"
        android:textColor="#ff7e7e7e"
        android:layout_margin="5dp"
        android:text="@string/theme_settings"
        />
    <Button
        android:id="@+id/settings_remove_caches_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/button_material_light"
        android:textSize="20dp"
        android:textColor="#ff7e7e7e"
        android:layout_margin="5dp"
        />
   

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dip"
        android:padding="10dip"
        android:text="@string/about"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/background_material_dark"
        />
    <Button
        android:id="@+id/settings_about_app_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/button_material_light"
        android:textSize="20dp"
        android:textColor="#ff7e7e7e"
        android:layout_margin="5dp"
        android:text="@string/about_app"
        />

    <Button
        android:id="@+id/settings_open_source_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/button_material_light"
        android:textSize="20dp"
        android:textColor="#ff7e7e7e"
        android:layout_margin="5dp"
        android:text="@string/open_source"
        />
    <Button
        android:id="@+id/settings_contacts_me_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/button_material_light"
        android:textSize="20dp"
        android:textColor="#ff7e7e7e"
        android:layout_margin="5dp"
        android:text="@string/contacts_me"
        />

</LinearLayout>